Fix Share left white spaces up to medium screen

--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -6,6 +6,7 @@
     display: flex;
     font-size: rem($ratio-text-small);
     margin-top: $margin-large;
+    padding-left: 0;
   }
 
   li {
